symbol data, layout bug fizes

--- a/_/components/sass/_molecules.scss
+++ b/_/components/sass/_molecules.scss
@@ -102,10 +102,27 @@
     .name,
     .legend-name {
         font-style: italic;
-        font-size: 13px;
-        font-size: 1.3rem;
-        margin-bottom: 12px;
+        font-size: 10px;
+        font-size: 1rem;
+        margin-bottom: 10px;
+        margin-bottom: 1rem;
+        @media (min-width: $screen-lg) {
+           margin-bottom: 12px;
         margin-bottom: 1.2rem;
+        }
+    }
+    .lan
+    {
+        margin-top: 43px;
+        padding-bottom: 2px;
+        @media (min-width: $screen-md) {
+           margin-top: 57px;
+        padding-bottom: 0;
+        }
+        @media (min-width: $screen-lg) {
+           margin-top: 61px;
+            padding-bottom: 0;
+        }
     }
     .weight,
     .legend-weight {
@@ -115,12 +132,20 @@
 } //name label wrapper
 .number-label-wrapper {
     position: absolute;
-    top: 4%;
+    top: 6%;
     left: 4%;
     .number, .legend-number {
         line-height: .8;
-        font-size: 18px;
-        font-size: 1.8rem;
+        font-size: 12px;
+        font-size: 1.2rem;
+        @media (min-width: $screen-md) {
+            font-size: 15px;
+            font-size: 1.5rem;
+        }
+        @media (min-width: $screen-lg) {
+            font-size: 18px;
+            font-size: 1.8rem;
+        }
     }
 } //number label wrapper
 .electron-label-wrapper {
